[gd_scene load_steps=5 format=2]

[ext_resource path="res://Menus/OptionsMenu.gd" type="Script" id=1]
[ext_resource path="res://UI/SlickerTheme.tres" type="Theme" id=2]
[ext_resource path="res://Menus/VolumeSlider.gd" type="Script" id=3]
[ext_resource path="res://UI/SlickerTitleDynamicFont.tres" type="DynamicFont" id=4]

[node name="OptionsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -52.0
margin_right = 52.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Title"]
margin_left = 4.0
margin_right = 99.0
margin_bottom = 48.0

[node name="Control" type="Control" parent="Title/VBoxContainer"]
margin_right = 95.0

[node name="TitleLabel" type="Label" parent="Title/VBoxContainer"]
margin_top = 4.0
margin_right = 95.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 4 )
text = "options"

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 85.0
margin_top = 77.0
margin_right = 235.0
margin_bottom = 103.0
rect_min_size = Vector2( 100, 0 )

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_right = 150.0

[node name="MasterAudio" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 150.0
margin_bottom = 26.0

[node name="MasterLabel" type="Label" parent="CenterContainer/VBoxContainer/MasterAudio"]
margin_right = 46.0
margin_bottom = 22.0
text = "master: "

[node name="VolumeSlider" type="HSlider" parent="CenterContainer/VBoxContainer/MasterAudio"]
margin_left = 50.0
margin_right = 150.0
margin_bottom = 22.0
rect_min_size = Vector2( 100, 22 )
max_value = 1.0
step = 0.05
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
margin_right = 34.0
margin_bottom = 22.0
text = "back"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/MasterAudio/VolumeSlider" to="." method="release_focus"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/MasterAudio/VolumeSlider" to="CenterContainer/VBoxContainer/MasterAudio/VolumeSlider" method="_on_value_changed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
